--- a/practice/09-02-grid-card/card.css
+++ b/practice/09-02-grid-card/card.css
@@ -8,21 +8,23 @@ html, body {
 }
 
 .itemWrap {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap : wrap;
-    background-color: aqua;
+    flex-wrap : wrap */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 7px;
 }
 
 .item {
-    width: calc(25% - 7px);
     aspect-ratio: 6 / 5;
     position: relative;
     overflow: hidden;
     border-radius: 5px;
-    margin: 5px 0px;
+    /* margin: 5px 0px; */
 }
 
 .imgBox {
